# clio-whisper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  start.bat
.github/workflows/: ci.yml
clio_api_server/app/: main.py
clio_api_server/app/api/: __init__.py  control.py  streaming.py  transcript.py
clio_api_server/app/core/: __init__.py  config.py
clio_api_server/app/models/: __init__.py  control.py  events.py  metrics.py  transcript.py
clio_api_server/app/services/: __init__.py  audio_capture.py  pipeline.py  redis_pipeline.py  redis_stream_manager.py  redis_workers.py  transcript_aggregator.py  whisperlive_client.py
clio_api_server/tests/: __init__.py  test_redis.py  test_redis_integration.py  test_transcript.py
playwright/: Dockerfile  docker-compose.yml
playwright/e2e/: run_checks.py
scripts/: clio-whisper.ps1  clio-whisper.sh  start-ecosystem.ps1  stop-ecosystem.ps1
